# web-audit

./: .gitignore  README.md  app.py  app1.py  main.py  pyautogui.py  pyproject.toml  requirements.txt  schema.py  schema_extraction.ipynb  screaming_frog_automation.py  streamlit_schema.py  test.ipynb  vercel.json
Data/: efax_internal_html.csv  images_missing_alt_text_efax.csv
modules/: helper_function.py
