[project]
name = "web-audit"
version = "0.1.0"
description = "This application uses data from screaming frog for web audit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.6.3",
    "extruct>=0.18.0",
    "fastapi>=0.115.12",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "streamlit>=1.45.0",
    "uvicorn>=0.34.2",
]


[tool.ruff]
lint.extend-select = ["PTH"]
